Modificacion de codigo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "name": "practicaasincronicidad1",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LauraAG98/PracticaAsincronicidad1.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LauraAG98/PracticaAsincronicidad1/issues"
+  },
+  "homepage": "https://github.com/LauraAG98/PracticaAsincronicidad1#readme",
+  "description": ""
 }
